--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -251,7 +251,7 @@
       height: 100vh;
       padding: 48px 40px;
       background-color: $site-background-color;
-      z-index: 999;
+      z-index: 2;
 
       .page-header__menu-button {
         position: absolute;
