--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -56,7 +56,7 @@ $bg-overlay: rgba(47, 48, 58, 0.4);
     @include breakpointFrom(desktop) {
       font-size: 44px;
       line-height: 1.36;
-      max-width: 600px;
+      max-width: 620px;
     }
   }
 
